force-app/main/default/objects/RWfB_Attachment__c/RWfB_Attachment__c.object-meta.xml
<CustomObject>
    <description>Object to house Business Partner Community Attachments for Accounts</description>
    <label>RWfB Attachment</label>
    <nameField>
        <displayFormat>RWFBA-{00000000}</displayFormat>
        <label>RWfB Attachments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWfB Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>