force-app/main/default/objects/RWfB_Attachment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account which the RWfB Attachment is related to.</description>
    <inlineHelpText>Account which the RWfB Attachment is related to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RWfB Attachments</relationshipLabel>
    <relationshipName>RWfB_Attachments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>