force-app/main/default/objects/RWfB_Attachment__c/fields/Document_for_Credit_Application__c.field-meta.xml
<CustomField>
    <fullName>Document_for_Credit_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify if the Document should be used in non-RWBAA Credit Application</description>
    <inlineHelpText>Identify if the Document should be used in non-RWBAA Credit Application</inlineHelpText>
    <label>Document for Credit Application</label>
    <type>Checkbox</type>
</CustomField>