force-app/main/default/objects/RWfB_Attachment__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <description>Name for the RWfB document</description>
    <inlineHelpText>Document Name</inlineHelpText>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>