force-app/main/default/objects/RWfB_Attachment__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the RWfB Attachment should be public facing. The default is FALSE, not public.</description>
    <inlineHelpText>Determines if the RWfB Attachment should be public facing. The default is FALSE, not public.</inlineHelpText>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>