force-app/main/default/objects/RWfB_Attachment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Define the Type of the Attachment.</description>
    <inlineHelpText>Define the Type of the Attachment.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Document_for_Credit_Application__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Voucher</fullName>
            </value>
            <value>
                <fullName>Customer Bid Document</fullName>
            </value>
            <value>
                <fullName>Customer Master Service Agreement</fullName>
            </value>
            <value>
                <fullName>Customer Purchase Order</fullName>
            </value>
            <value>
                <fullName>Customer Trade Reference</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Red Wing Program Agreement</fullName>
            </value>
            <value>
                <fullName>Signed Contract</fullName>
            </value>
            <value>
                <fullName>Tax Exempt Certificate</fullName>
            </value>
            <value>
                <fullName>W-9</fullName>
            </value>
            <value>
                <fullName>Customer Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>